--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
    				<img src="images/profile-pic12.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am currently working at Glassdoor as a Big Data Engineer with the Search and ML team. I graduated with a Master's in Information Management at the University of Washington with a specialization in Data Science.
+   				<p class="lead">I am currently working at Amazon Advertising as a Data Engineer with the Machine Learning & Optimization team. I graduated with a Master's in Information Management at the University of Washington with a specialization in Data Science.
 
-My prior work experience at Deloitte was in the Data Analytics domain with expertise in SQL, Data Analysis, ETL, Data Warehousing and data visualization tools SAP Business Objects, Tableau, QlikView and Lumira.
+My prior work experience at Glassdoor was in the Data Engineering domain with expertise in Apache Airflow, Spark applications, and other Big Data technologies.
 
 Always on a constant mission to improve my skills and learn new things.</p>
    			</div>   			
@@ -231,7 +231,27 @@ Always on a constant mission to improve my skills and learn new things.</p>
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+				
+   				<div class="timeline-block">
 
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Data Engineer</h3>
+	   					<p>September '22 - present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Amazon</h4>
+	   					<p>•	Develop data applications to algorithm launch, drive product adoption, and develop and monitor system health metrics via centralizing analytics resources and infrastructure.
+
+
+						<br>•	Collaborate with scientists and ML engineers to build robust monitoring and analysis for online experimentation, system health metrics.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -240,7 +260,7 @@ Always on a constant mission to improve my skills and learn new things.</p>
 
 	   				<div class="timeline-header">
 	   					<h3>Big Data Engineer</h3>
-	   					<p>June '19 - present</p>
+	   					<p>June '19 - September '22</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -675,3 +695,4 @@ Always on a constant mission to improve my skills and learn new things.</p>
 </body>
 
 </html>
+
