--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ Always on a constant mission to improve my skills and learn new things.</p>
    				</li>
    				<li>
    					<strong>Organization:</strong>
-   					<span>Glassdoor</span>
+   					<span>Amazon</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Big Data Engineer - Consumer</span>
+   					<span>Data Engineer</span>
    				</li>
    				<li>
    					<strong>Location:</strong>
-   					<span>San Francisco</span>
+   					<span>Seattle</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -168,25 +168,22 @@ Always on a constant mission to improve my skills and learn new things.</p>
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>SQL</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
 				   	<strong>Python</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Data Science</strong>
+				   	<strong>Spark</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>Java</strong>
+				   	<strong>AWS Technologies</strong>
 				   </li>
 				   <li>
 
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Leadership</strong>
+				   	<strong>Big Data</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -695,4 +692,5 @@ Always on a constant mission to improve my skills and learn new things.</p>
 </body>
 
 </html>
+
 
