--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Always on a constant mission to improve my skills and learn new things.</p>
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/open?id=128lnyftGxLt8U5zpAjfkdB11qQ-gSb7-" target = "_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/1LQmDtTHDMC62V404IVPWp_fievgAcWhm/view?usp=sharing" target = "_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -692,5 +692,6 @@ Always on a constant mission to improve my skills and learn new things.</p>
 </body>
 
 </html>
+
 
 
